crates/churl/tests/snapshots/tui_snapshot__inspector_overlay_request_section_masks_secret.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snap
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ use┏ Inspector — tab sections · y copy curl (masked) · q/esc close┓───────┘
│       ┃ Request  Vars  Redirects  Decisions  Error                   ┃───────┐
│       ┃GET https://api.test/orders                                   ┃       │
│       ┃  Authorization: ••••••                                       ┃       │
│       ┃                                                              ┃       │
│       ┃body: none                                                    ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃───────┘
│       ┃                                                              ┃───────┐
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
└───────┃                                                              ┃       │
┌ Sequen┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛       │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
