crates/churl/tests/snapshots/tui_snapshot__inspector_overlay_traffic_browse_position.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snap
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ use┏ Inspector — tab sections · n/N traffic [live/2] · y copy curl┓───────┘
│       ┃ Request  Vars  Redirects  Decisions  Error                   ┃───────┐
│       ┃no trace captured for this exchange yet.                      ┃       │
│       ┃                                                              ┃       │
│       ┃2 exchanges in the session Traffic feed — press n to browse.  ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃───────┘
│       ┃                                                              ┃───────┐
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
│       ┃                                                              ┃       │
└───────┃                                                              ┃       │
┌ Sequen┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛       │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 debug capture ON — sends now build an inspectable trace                        
 EXPLORER · demo · DEBUG · ? help · space leader · / search · : palette
