crates/churl/tests/snapshots/tui_snapshot__jump_overlay_shows_labels.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 127
expression: snapshot(&mut app)
---
┌ Explorer [a] ────────┐┌ Request [s] ─────────────┐┌ Response [d] ────────────┐
│f ▸ orders            ││                          ││no response yet           │
│g ▾ users             ││no endpoint selected      ││                          │
│h   List users        ││                          ││no endpoint selected      │
│j   Create user       ││                          ││                          │
│k   Get user          ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
│                      ││                          ││                          │
└──────────────────────┘└──────────────────────────┘└──────────────────────────┘
 EXPLORER · demo · j/k move · enter select · ctrl-s send · f jump · / search · :
