crates/churl/tests/snapshots/tui_snapshot__leader_sequences_submenu_popup.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 1534
expression: snapshot(&mut app)
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓┌ URL ───────────────────────────────────────────┐
┃> ▸ orders                  ┃│no endpoint selected                            │
┃  ▸ users                   ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Request ───────────────────────────────────────┐
┃                            ┃│                                                │
┃                            ┃│no endpoint selected                            │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────────────────────────────────┐
┃                            ┃│no response yet                                 │
┃                            ┃│                                                │
┃                            ┃│no endpoint selected                            │
┃                            ┃│                                                │
┃                            ┃│                        ┏ leader · sequences ━━━┓
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│                        ┃ Space  open sequence  ┃
┌ Sequences ─────────────────┐│                        ┃ n  new sequence       ┃
│<leader>s n to add          ││                        ┃ r  run sequence (pick)┃
└────────────────────────────┘└────────────────────────┗━━━━━━━━━━━━━━━━━━━━━━━┛
 EXPLORER · demo · ? help · space leader · / search · : palette
