crates/churl/tests/snapshots/tui_snapshot__leader_which_key_popup.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┏ Explorer ━━━━━━━━━━━━━━━━━━┓┌ URL ───────────────────────────────────────────┐
┃> ▸ orders                  ┃│no endpoint selected                            │
┃  ▸ users                   ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Request ───────────────────────────────────────┐
┃                            ┃│                                                │
┃                            ┃│no endpoint selected                            │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃│                                                │
┃                            ┃└────────────────────────────────────────────────┘
┃                            ┃┌ Response ──────────┏ leader ━━━━━━━━━━━━━━━━━━━┓
┃                            ┃│no response yet     ┃ c  cancel request         ┃
┃                            ┃│                    ┃ v  Environments & vars    ┃
┃                            ┃│no endpoint selected┃ f  request picker         ┃
┃                            ┃│                    ┃ w  workspace picker       ┃
┃                            ┃│                    ┃ q  quit                   ┃
┃                            ┃│                    ┃ s  send request           ┃
┃                            ┃│                    ┃ p  switch profile         ┃
┃                            ┃│                    ┃ e  toggle explorer sidebar┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└────────────────────┗━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 EXPLORER · demo · ? help · space leader · / search · : palette
