crates/churl/tests/snapshots/tui_snapshot__method_menu_overlay.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 850
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐ List users                                       
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││GET  https://api.test/users                     │
│>   List users              │└────────────────────────────────────────────────┘
│    Create user             │┌ Request ───────────────────────────────────────┐
│    Get user                ││ Params(0)   Headers(0)   Auth   Body           │
│                            ││  (no params — a to add)                        │
│                           ┏ Method ━━━━━━━━━━━━━━┓                           │
│                           ┃ ● g  GET             ┃                           │
│                           ┃   p  POST            ┃                           │
│                           ┃   u  PUT             ┃                           │
│                           ┃   t  PATCH           ┃                           │
│                           ┃   d  DELETE          ┃───────────────────────────┘
│                           ┃   h  HEAD            ┃───────────────────────────┐
│                           ┃   o  OPTIONS         ┃                           │
│                           ┗━━━━━━━━━━━━━━━━━━━━━━┛users                      │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 URL · demo · ? help · space leader · / search · : palette
